did some styling

--- a/index.html
+++ b/index.html
@@ -21,24 +21,25 @@
 				</ul>
 			</div>
 
+
 				<!-- links on the right side -->
 			<div >
 				<ul class="right">
 
 
 					<li><a href="https://www.linkedin.com/in/tristan-metcalf-b545525b/"><img class="resize" src="img/In-Black-66px-TM.png" 
-					 alt="linkedIn"></a></li>
-					<li><a href="https://codepen.io/tristan-metcalf/"><img class="resize" src="img/icons8-codepen-filled-50.png" 
-					 alt="codepen"></a></li>
+					 alt="linkedIn"></a></li><br><br>
 					<li><a href="https://github.com/Tristan-Metcalf"><img class="resize" src="img/GitHub-Mark-64px.png" 
+					 alt="codepen"></a></li><br><br><!-- its my resume dont judge -->
+					<li><a href="https://codepen.io/tristan-metcalf/"><img style="width: 70px;" class="resize" src="img/icons8-codepen-filled-50.png" 
 					 alt="codepen"></a></li>
-
 				</ul>
 
 
 			</div>
 
 		</div>
+
 
 		<div id="company">
 					<img id="backgroundImg" src="img/laptop.jpg" alt="laptop">
@@ -54,27 +55,15 @@
 
 	</header>
 
-	<div>
-		<div class="container2">
-			<div id="bodyimages">
-				<div style="float: right;">
-					<p>Quick Deployment</p>
-					<img src="img/rocket.png" alt="Rocket">
-				</div>
-				<div style="float: right">
-					<p>Scalability Oriented</p>
-					<img src="img/Gears.png" alt="Gears">
-				</div>
-			</div>
-			<div id="paragraphs">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam, quia esse voluptatum sed reiciendis laboriosam incidunt perspiciatis suscipit sunt voluptates? Incidunt nam quo quos repellat illum quis mollitia doloremque accusamus, distinctio sint laudantium dolor cumque aperiam aliquid sunt necessitatibus, suscipit consequuntur accusantium dolores voluptatem in nostrum quaerat, optio. Ullam harum delectus deserunt error repellendus ab eum iste accusamus, reiciendis ex reprehenderit, libero. Placeat iusto laboriosam, reiciendis aut error fuga sequi labore saepe quis a, dolorum fugit ducimus modi! Veniam est aliquid voluptatum neque illum accusantium veritatis ratione perspiciatis, possimus, rerum, praesentium repellendus culpa magni, nostrum ducimus numquam iusto tempora laudantium.
-
-				</p>
+				<div class="container2">
+				
 			</div>
 
 
-		</div>
-	
+
+
+
+
 			<footer>
 				<div>
 					<cite class="footerleft">Tristan Metcalf 2018</cite>
