--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 
 		<div id="company">
-					<img id="backgroundImg" src="img/laptop.jpg" alt="laptop">
+					<img id="backgroundImg" src="img/pexels-photo.jpg" alt="laptop">
 				
 					<h1 style="font-size: 130px;">Tristan <span>Metcalf</span></h1>
 		</div>
@@ -58,7 +58,14 @@
 				<div class="container2"></div>
 
 				<div class="container3">
-</div>
+					<img src="img/rocket.png" alt="">
+					<img src="img/Gears.png" alt="">
+				</div>
+
+				<div class="container3">
+					<p>Quick Deployment</p>
+					<p>Scalability in mind</p>
+				</div>
 
 
 
