--- a/index.html
+++ b/index.html
@@ -56,17 +56,26 @@
 	</header>
 
 				<div class="container2"></div>
-
 				<div class="container3">
-					<img src="img/rocket.png" alt="">
-					<img src="img/Gears.png" alt="">
+					<div class="about">
+					<h1>Who am i?</h1>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit facere eos provident, maiores deleniti quas, vero dolorum. Nobis numquam, eligendi.</p>
+					</div>
 				</div>
 
+
 				<div class="container3">
+					</div>
+				</div>
+
+				<div class="container4">
+					<div id="bodyimages">
+					<img src="img/rocket.png" alt="rocket">
 					<p>Quick Deployment</p>
+					<img src="img/Gears.png" alt="Gears">
 					<p>Scalability in mind</p>
+					</div>
 				</div>
-
 
 
 
