--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+
+
 	<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lobster" />
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/stylesheet.css">
+
 	<meta charset="UTF-8">
 	<title>Resume</title>
 </head>
@@ -15,6 +19,7 @@
 		<div class="headerProps">
 			<div id="navbar">
 				<ul class="left">
+					<li><i class="fab fa-pied-piper"></i></li>
 					<li><a id="button1" href="#">home</a></li>
 					<li><a href="#">services</a></li>
 					<li><a href="#">portfolio</a></li>
@@ -24,8 +29,7 @@
 
 				<!-- links on the right side -->
 			<div >
-				<ul class="right" style="margin: 70px 30px 30px 30px;">
-
+				<ul class="right" style="margin: 40px 30px 30px 30px;">
 
 					<li><a href="https://www.linkedin.com/in/tristan-metcalf-b545525b/"><img class="resize" src="img/In-Black-66px-TM.png" 
 					 alt="linkedIn"></a></li><br><br>
