added hover effects on top links

--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
 		<div class="headerProps">
 			<div id="navbar">
 				<ul class="left">
-					<li><i class="fab fa-pied-piper"></i></li>
-					<li><a id="button1" href="#">home</a></li>
-					<li><a href="#">services</a></li>
+					<li><a href="#"><i class="fab fa-pied-piper"></a></i></li>
 					<li><a href="#">portfolio</a></li>
+					<li><a id="button1" href="#">services</a></li>
 				</ul>
 			</div>
 
