--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		<div id="company">
 					<img id="backgroundImg" src="img/pexels-photo.jpg" alt="laptop">
 				
-					<h1 style="font-size: 130px;">Tristan <span>Metcalf</span></h1>
+					<h1>Tristan <span>Metcalf</span></h1>
 		</div>
 		<div class="backgroundImg">
 			
