--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<!-- <script src="jquery-3.3.1.min.js"></script> -->
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
 
@@ -60,13 +62,15 @@
 
 				<div class="container2"></div>
 				<div class="container3">
+					<div class="abouth1">
+					<h1>Who am i?</h1>
+					</div>
 				</div>
 
 
 				<div class="container3">
 					<div class="about">
-					<h1>Who am i?</h1>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit facere eos provident, maiores deleniti quas, vero dolorum. Nobis numquam, eligendi.</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit facere eos provident, maiores deleniti quas, vero dolorum. Nobis numquam, eligendi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus quo deleniti voluptatem aperiam, iusto quidem at illo odio, perferendis cum, odit dolorem quasi autem! Vero, architecto laborum obcaecati officiis voluptas, illum sapiente molestias, itaque nemo tempora corporis optio laudantium. Voluptatem quae nam dignissimos magnam vitae ea quas quasi dolore dolores culpa quia nisi quidem, dolor aliquid doloribus esse non illo.</p>
 					</div>
 				</div>
 
@@ -89,26 +93,7 @@
 					<a class="footerright" href="policy.html">Policy</a>
 				</div>
 			</footer>
-<script>
-var image = document.getElementById('backgroundImg');
-var button = document.getElementById('button1')
-var image1 = 1;
-
-
-button.onclick = function() {
-	if (image1 == 1) {
-		image.src = "img/pexels-photo.jpg";
-		image1 = 0;
-
-	}else{
-
-	image.src = "img/laptop.jpg";
-	image1 = 1;
-	}
-	console.log(image);
-}
-
-
+<script src="js/main.js">
 </script>
 </body>
 </html>
