responsive and more styling

--- a/index.html
+++ b/index.html
@@ -77,10 +77,15 @@
 
 				<div class="container4">
 					<div id="bodyimages">
-					<img src="img/rocket.png" alt="rocket">
-					<p>Quick Deployment</p>
-					<img src="img/Gears.png" alt="Gears">
-					<p>Scalability in mind</p>
+						<div id="imageone">
+							<img src="img/rocket.png" alt="rocket">
+							<p>Quick Deployment</p>
+						</div>
+						<br><br><br>
+						<div id="imageone">
+							<img src="img/Gears.png" alt="Gears">
+							<p>Scalability in mind</p>
+						</div>
 					</div>
 				</div>
 
@@ -88,7 +93,7 @@
 
 
 			<footer>
-				<div>
+				<div style="background-color: color: rgb(50,51,55)">
 					<cite class="footerleft">Tristan Metcalf 2018</cite>
 					<a class="footerright" href="policy.html">Policy</a>
 				</div>
