added longer fadein

--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
 					<div id="bodyimages">
 						<div id="imageone">
 							<img src="img/rocket.png" alt="rocket">
-							<p>Quick Deployment</p>
+							<p class="parag">Quick Deployment</p>
 						</div>
 						<br><br><br>
 						<div id="imageone">
 							<img src="img/Gears.png" alt="Gears">
-							<p>Scalability in mind</p>
+							<p class="parag">Scalability in mind</p>
 						</div>
 					</div>
 				</div>
