--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lobster" />
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/stylesheet.css">
-
+	<link rel="stylesheet" href="css/animate.css">
 	<meta charset="UTF-8">
 	<title>Resume</title>
 </head>
@@ -63,7 +63,7 @@
 				<div class="container2"></div>
 				<div class="container3">
 					<div class="abouth1">
-					<h1>Who am i?</h1>
+					<h1>Who am I?</h1>
 					</div>
 				</div>
 
@@ -78,12 +78,12 @@
 				<div class="container4">
 					<div id="bodyimages">
 						<div id="imageone">
-							<img src="img/rocket.png" alt="rocket">
+							<img class="imgAni" src="img/rocket.png" alt="rocket">
 							<p class="parag">Quick Deployment</p>
 						</div>
 						<br><br><br>
 						<div id="imageone">
-							<img src="img/Gears.png" alt="Gears">
+							<img class="imgAni" src="img/Gears.png" alt="Gears">
 							<p class="parag">Scalability in mind</p>
 						</div>
 					</div>
