animations and styling

--- a/index.html
+++ b/index.html
@@ -76,7 +76,6 @@
 
 
 				<div class="container4">
-					<div id="bodyimages">
 						<div id="imageone">
 							<img class="imgAni" src="img/rocket.png" alt="rocket">
 							<p class="parag">Quick Deployment</p>
@@ -86,18 +85,28 @@
 							<img class="imgAni" src="img/Gears.png" alt="Gears">
 							<p class="parag">Scalability in mind</p>
 						</div>
+					<div class="imageGroupTwo">
+						<div style="top: -18px;" id="imagetwo">
+							<img class="imgAni2" src="img/jquery.png" alt="">
+							<p class="parag2">jquery</p>
+						</div>
+						<div style="top: 50px;" id="imagetwo">
+							<img class="imgAni2" src="img/nodejs.png" alt="">
+							<p class="parag2">Node.Js</p>
+						</div>
 					</div>
 				</div>
 
 
 
-
+<div class="container5">
 			<footer>
 				<div style="background-color: color: rgb(50,51,55)">
 					<cite class="footerleft">Tristan Metcalf 2018</cite>
 					<a class="footerright" href="policy.html">Policy</a>
 				</div>
 			</footer>
+</div>
 <script src="js/main.js">
 </script>
 </body>
