cleaned up animations

--- a/index.html
+++ b/index.html
@@ -76,25 +76,24 @@
 
 
 				<div class="container4">
-						<div id="imageone">
-							<img class="imgAni" src="img/rocket.png" alt="rocket">
-							<p class="parag">Quick Deployment</p>
+							<div id="imageone">
+								<img class="imgAni" src="img/rocket.png" alt="rocket">
+								<p class="parag">Quick Deployment</p>
+							</div>
+							<div id="imageone">
+								<img class="imgAni" src="img/Gears.png" alt="Gears">
+								<p class="parag">Scalability in mind</p>
+							</div>
+						<div class="imageGroupTwo">
+							<div id="imagetwo">
+								<img class="imgAni2" src="img/jquery.png" alt="">
+								<p class="parag2">jquery</p>
+							</div>
+							<div style="top: 50px;" id="imagetwo">
+								<img class="imgAni2" src="img/nodejs.png" alt="">
+								<p class="parag2">Node.Js</p>
+							</div>
 						</div>
-						<br><br><br>
-						<div id="imageone">
-							<img class="imgAni" src="img/Gears.png" alt="Gears">
-							<p class="parag">Scalability in mind</p>
-						</div>
-					<div class="imageGroupTwo">
-						<div style="top: -18px;" id="imagetwo">
-							<img class="imgAni2" src="img/jquery.png" alt="">
-							<p class="parag2">jquery</p>
-						</div>
-						<div style="top: 50px;" id="imagetwo">
-							<img class="imgAni2" src="img/nodejs.png" alt="">
-							<p class="parag2">Node.Js</p>
-						</div>
-					</div>
 				</div>
 
 
