fixed weird bug with the reset,css stylesheet
added negative margin to the media query because in mobile view a white line was showing inbetween divs.

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 <body>
 		<!-- heading section -->
 
-			<!-- links on the left side -->
+			<!-- links on the top -->
 	<header class="container1 ">
 		<div class="headerProps">
 			<div id="navbar">
 				<ul class="left">
-					<li><a href="#"><i class="fab fa-pied-piper"></a></i></li>
+					<li><img style="height: 65px;width: 65px;" class="resize" src="img/tm3.png" alt=""></li>
 					<li><a href="#">portfolio</a></li>
 					<li><a id="button1" href="#">services</a></li>
 				</ul>
