styling and responsiveness

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<div class="headerProps">
 			<div id="navbar">
 				<ul class="left">
-					<li><img style="height: 65px;width: 65px;" class="resize" src="img/tm3.png" alt=""></li>
+					<li><img style="height: 108px;width: 108px;position: relative;left: 30px;" class="resize" src="img/tm3.png" alt=""></li>
 					<li><a href="#">portfolio</a></li>
 					<li><a id="button1" href="#">services</a></li>
 				</ul>
@@ -30,13 +30,13 @@
 
 				<!-- links on the right side -->
 			<div >
-				<ul class="right" style="margin: 40px 30px 30px 30px;">
+				<ul class="right" style="margin: 60px 30px 30px 30px;">
 
 					<li><a href="https://www.linkedin.com/in/tristan-metcalf-b545525b/"><img class="resize" src="img/In-Black-66px-TM.png" 
 					 alt="linkedIn"></a></li><br><br>
 					<li><a href="https://github.com/Tristan-Metcalf"><img class="resize" src="img/GitHub-Mark-64px.png" 
 					 alt="codepen"></a></li><br><br><!-- its my resume dont judge -->
-					<li><a href="https://codepen.io/tristan-metcalf/"><img style="width: 70px;" class="resize" src="img/icons8-codepen-filled-50.png" 
+					<li><a href="https://codepen.io/tristan-metcalf/"><img style="width: 125px;height: 125px;" class="resize" src="img/icons8-codepen-filled-50.png" 
 					 alt="codepen"></a></li>
 				</ul>
 
@@ -76,24 +76,6 @@
 
 
 				<div class="container4">
-							<div id="imageone">
-								<img class="imgAni" src="img/rocket.png" alt="rocket">
-								<p class="parag">Quick Deployment</p>
-							</div>
-							<div id="imageone">
-								<img class="imgAni" src="img/Gears.png" alt="Gears">
-								<p class="parag">Scalability in mind</p>
-							</div>
-						<div class="imageGroupTwo">
-							<div id="imagetwo">
-								<img class="imgAni2" src="img/jquery.png" alt="">
-								<p class="parag2">jquery</p>
-							</div>
-							<div style="top: 50px;" id="imagetwo">
-								<img class="imgAni2" src="img/nodejs.png" alt="">
-								<p class="parag2">Node.Js</p>
-							</div>
-						</div>
 				</div>
 
 
