--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 		<div class="headerProps">
 			<div id="navbar">
 				<ul class="left">
-					<li><img style="height: 108px;width: 108px;position: relative;left: 30px;" class="resize" src="img/tm3.png" alt=""></li>
+					<li><img style="height: 56px;width: 56px;position: relative;left: 30px;" class="resize" src="img/tm3.png" alt=""></li>
+					<li><a href="#">contact</a></li>
 					<li><a href="#">portfolio</a></li>
 					<li><a id="button1" href="#">services</a></li>
 				</ul>
@@ -36,7 +37,7 @@
 					 alt="linkedIn"></a></li><br><br>
 					<li><a href="https://github.com/Tristan-Metcalf"><img class="resize" src="img/GitHub-Mark-64px.png" 
 					 alt="codepen"></a></li><br><br><!-- its my resume dont judge -->
-					<li><a href="https://codepen.io/tristan-metcalf/"><img style="width: 125px;height: 125px;" class="resize" src="img/icons8-codepen-filled-50.png" 
+					<li><a href="https://codepen.io/tristan-metcalf/"><img style="width: 100px;height: 100px;" class="resize" src="img/icons8-codepen-filled-50.png" 
 					 alt="codepen"></a></li>
 				</ul>
 
@@ -63,7 +64,7 @@
 				<div class="container2"></div>
 				<div class="container3">
 					<div class="abouth1">
-					<h1>Who am I?</h1>
+					<h1>Backstory</h1>
 					</div>
 				</div>
 
@@ -76,6 +77,24 @@
 
 
 				<div class="container4">
+					<div>
+						<img class="imgAni" src="img/Gears.png" alt="Gears">
+						<p class="parag">Scalability</p>
+					</div>
+
+					<div>
+						<img class="imgAni2" src="img/jquery.png" alt="Jquery logo">
+						<p class="parag">JQuery</p>
+					</div>
+
+					<div>
+						<img class="imgAni" src="img/nodejs.png" alt="nodejs logo">
+						<p class="parag">NodeJs</p>
+					</div>
+					<div>
+						<img class="imgAni2" src="img/rocket.png" alt="rocketship">
+						<p class="parag">Quick Deployment</p>
+					</div>
 				</div>
 
 
