--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 					</div>
 				</div>
 
-
-				<div class="container4">
+			<div class="container4">
+				<div class="container4inside">
 					<div>
 						<img class="imgAni" src="img/Gears.png" alt="Gears">
 						<p class="parag">Scalability</p>
@@ -96,6 +96,7 @@
 						<p class="parag">Quick Deployment</p>
 					</div>
 				</div>
+			</div>
 
 
 
