added form removed some animations
added form

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
 			<div class="container4">
 				<div class="container4inside">
 					<div>
-						<img class="imgAni" src="img/Gears.png" alt="Gears">
-						<p class="parag">Scalability</p>
+						<img src="img/Python-Logo.png" alt="python logo" class="imgAni2">
+						<p class="imgAni2">Python</p>
 					</div>
 
 					<div>
@@ -91,11 +91,37 @@
 						<img class="imgAni" src="img/nodejs.png" alt="nodejs logo">
 						<p class="parag">NodeJs</p>
 					</div>
-					<div>
-						<img class="imgAni2" src="img/rocket.png" alt="rocketship">
-						<p class="parag">Quick Deployment</p>
-					</div>
+
 				</div>
+			<div class="container4inside">
+					<div>
+						<img src="img/verticalDocker.png" alt="docker logo" class="imgAni2">
+					</div>
+					<div>
+						<img src="img/logo-mysql-170x115.png" alt="mysql" class="imgAni2">
+					</div>
+					<div>
+						<img src="img/new-php-logo.png" style="height: 90px;width: 90px;" alt="Php logo" class="imgAni2">
+					</div>
+	
+			</div>
+
+
+			<form method="POST" class="form" action=emails.php" id="usrform">
+					<div class="stackedform">
+						<input placeholder="Name" type="text"><br>
+					</div>
+					<div class="stackedform">
+						<input placeholder="Email" type="email"><br>
+					</div>
+					<div class="stackedform">
+						<textarea  name="comment" form="usrform">Enter message here...</textarea>
+					</div>
+					<div class="stackedform">
+						<button>submit</button>
+					</div>
+			</form>
+				
 			</div>
 
 
