--- a/index.html
+++ b/index.html
@@ -85,9 +85,23 @@
 					<i>lorem</i>
 				</div>
 
+				<div class="container3inside">
+						<p>Lorem ipsum dolor.</p>
+						<p>Nobis quidem, ab.</p>
+						<p>Dolorem, iure animi.</p>		
+				</div>
+				<div class="container3inside"></div>
+				<div class="container3inside"></div>
+
+
+
+
 
 
 			<div class="containerbefore4">
+				<h1>Latest Project</h1><br>					
+				<img src="http://via.placeholder.com/350x350" alt="picture1">
+
 				
 
 			</div>
@@ -129,7 +143,7 @@
 
 					
 						<form method="POST" class="form" action=emails.php" id="usrform" name="usrform">
-									<h1 class="stackedform" style="font-size: 32px;">Contact me</h1>
+									<h1 class="stackedform">Contact me</h1>
 								<div class="stackedform">
 									<input class="contactInput" placeholder="Name" type="text"><br>
 								</div>
