added embed soundcloud

--- a/index.html
+++ b/index.html
@@ -100,8 +100,7 @@
 
 			<div class="containerbefore4">
 				<h1>Latest Project</h1><br>					
-				<iframe allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Fchansn&color=orange_white&size=64" style="width: 64px; height: 64px;"></iframe>
-
+				<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/516348825&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 				
 
 			</div>
