styled containers 3 and 4
positioned some elements all thats left is the footer

--- a/index.html
+++ b/index.html
@@ -92,8 +92,13 @@
 						<p>Nobis quidem, ab.</p>
 						<p>Dolorem, iure animi.</p>		
 				</div>
-				<div class="container3inside"></div>
-				<div class="container3inside"></div>
+				<div class="container3inside">
+				<h1>Latest Project</h1>		
+					
+				</div>
+				<div class="container3inside">
+					
+				</div>
 
 
 
@@ -101,7 +106,6 @@
 
 
 			<div class="containerbefore4">
-				<h1>Latest Project</h1>		
 					<div class="flexboxinside4">	
 						<div class="iframe">
 							<iframe  width="100%" height="600" scrolling="yes" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/516348825&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
