--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 	<link rel="stylesheet" href="css/animate.css">
 	<link rel="stylesheet" href="css/simplebar.css">
 	<link rel="stylesheet" href="css/stylesheet.css">
+	<link rel="shortcut icon" href="img/tm3.png" type="image/x-icon" />
+
 	<meta charset="UTF-8">
 	<title>Resume</title>
 </head>
