--- a/index.html
+++ b/index.html
@@ -117,6 +117,12 @@
 							<p>		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere nisi sequi quo laborum eveniet illum ex doloremque porro repellat. Saepe sed atque eos inventore facilis officiis dolorum, incidunt optio iure!</p>
 
 							<p>	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque libero et vel labore voluptatem natus nulla, sunt quaerat velit officia!</p>
+							<br>
+
+							<a class="linkBox" href="#">
+								Click Here For More →
+							</a>
+
 				
 
 
