--- a/index.html
+++ b/index.html
@@ -183,10 +183,20 @@
 								
 									<button class="submitButton">submit</button>
 						</form>
-						<div class="hide imgAni">	
-					<cite class="footerleft">Tristan Metcalf 2018</cite>
-					<a class="footerright" href="policy.html">Policy</a>
+						<div class="sourcesContainer">
+							<div class="citeposition">
+								<cite>Learning Sources</cite>
+								<a href="https://www.freecodecamp.org/">freecodecamp</a>
+								<a href="https://learncodethehardway.org/">learncodethehardway.org</a>
+								<a href="https://ocw.mit.edu/courses/">MITOpenCourseware</a>
+								<a href="https://www.edx.org/">EDX</a>
+							</div>
 						</div>
+							
+							<div class="hide imgAni">	
+						<cite class="footerleft">Tristan Metcalf 2018</cite>
+						<a class="footerright" href="policy.html">Policy</a>
+							</div>
 			</div>
 
 
