--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 	<link rel="stylesheet" href="css/stylesheet.css">
 	<link rel="shortcut icon" href="img/tm3.png" type="image/x-icon" />
 
+
+
 	<meta charset="UTF-8">
 	<title>Resume</title>
 </head>
@@ -26,8 +28,8 @@
 			<div id="navbar">
 				<ul class="left">
 					<li><img style="height: 56px;width: 56px;position: relative;left: 30px;" class="resize" src="img/tm3.png" alt=""></li>
+					<li><a href="portfolio.html">portfolio</a></li>
 					<li><a href="#usrform">contact</a></li>
-					<li><a href="#">portfolio</a></li>
 					<!-- <li><a id="button1" href="#">services</a></li> -->
 				</ul>
 			</div>
