small tweaks to things that annoyed me

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 			<div class="containerbefore4">
 					<div class="hide imgAni flexboxinside4">	
 						<div class="imgAni2 iframe">
-							<iframe  width="100%" height="600" scrolling="yes" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/516348825&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+							<iframe  width="100%" height="600" scrolling="no" frameborder="no" allow="autoplay" src="https://tristan-metcalf.github.io/resume/"></iframe>
 
 						</div>	
 						<div class="aboutproject">	
@@ -188,8 +188,8 @@
 						<div class="hide imgAni sourcesContainer">
 							<div class="citeposition">
 								<cite>Learning Sources</cite>
-								<a href="https://www.freecodecamp.org/">freecodecamp</a>
-								<a href="https://learncodethehardway.org/">learncodethehardway.org</a>
+								<a href="https://www.freecodecamp.org/">Freecodecamp</a>
+								<a href="https://learncodethehardway.org/">LearnCodeTheHardWay</a>
 								<a href="https://ocw.mit.edu/courses/">MITOpenCourseware</a>
 								<a href="https://www.edx.org/">EDX</a>
 							</div>
