added particles and removed libraries i dont use

--- a/portfolio.html
+++ b/portfolio.html
@@ -22,14 +22,14 @@
 				<ul class="left">
 					<li><img style="height: 54px;width: 56px;position: relative;left: 30px;" class="resize" src="img/tm3.png" alt=""></li>
 					<li><a href="index.html">Home</a></li>
-					<li><a href="#usrform">contact</a></li>
+					<li><a href="#usrform">Contact</a></li>
 					<!-- <li><a id="button1" href="#">services</a></li> -->
 				</ul>
 			</div>
 
 		</div>
 
-	<div class="Maincontainer">
+	<div id="particles-js" class="Maincontainer">
 
 	</div>
 
@@ -67,6 +67,9 @@
 						<a class="footerright" href="policy.html">Policy</a>
 							</div>
 			</div>
+
+<script src="js/particles.js"></script>
+<script src="js/app.js"></script>
 	
 </body>
 </html>
