--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 			<div id="navbar">
 				<ul class="left">
 					<li><img style="height: 54px;width: 56px;position: relative;left: 30px;" class="resize" src="img/tm3.png" alt=""></li>
-					<li><a href="portfolio.html">portfolio</a></li>
-					<li><a href="#usrform">contact</a></li>
+					<li><a href="portfolio.html">Portfolio</a></li>
+					<li><a href="#usrform">Contact</a></li>
 					<!-- <li><a id="button1" href="#">services</a></li> -->
 				</ul>
 			</div>
@@ -200,7 +200,6 @@
 						<a class="footerright" href="policy.html">Policy</a>
 							</div>
 			</div>
-
 
 
 <script src="js/main.js">
