final version until i take better picture

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 			
 		</div>
 		<div id="logo">	
-		<img src="http://via.placeholder.com/350x350" alt="picture1">
+		<img src="img/tristan.png" style="height: 350px; width: 350px;" alt="picture1">
 		</div>
 
 	</header>
@@ -93,7 +93,7 @@
 
 
 				<div class="hide imgAni container3inside">
-						<p>Lorem ipsum dolor.</p>
+						<p>FullStack Web <br>Developer	</p>
 						<p>Team Player, <br>Cooperative</p>
 						<p>Problem Solver,<br> Analytical</p>		
 				</div>
@@ -117,12 +117,15 @@
 
 						</div>	
 						<div class="aboutproject">	
-							<p>		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere nisi sequi quo laborum eveniet illum ex doloremque porro repellat. Saepe sed atque eos inventore facilis officiis dolorum, incidunt optio iure!</p>
+							<p>		This is my first website I ever Wrote, I used mostly Vanilla tools like HTML and CSS. In the process I learned container management in CSS.</p><br>	
 
-							<p>	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque libero et vel labore voluptatem natus nulla, sunt quaerat velit officia!</p>
+							<p> I used 
+							Flexbox, CSS Grids and media queries for responsive design. It was a fun project and enjoyed myself making it for Fullstack Birmingham course.</p>
+
+							<p>	Tools used: Html,Css, and JQuery</p>
 							<br>
 
-							<a class="linkBox" href="#">
+							<a class="linkBox" href="portfolio.html">
 								Click Here For More →
 							</a>
 
