--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 			
 		</div>
 		<div id="logo">	
-		<img src="img/tristan.png" style="height: 350px; width: 350px;" alt="picture1">
+		<img src="img/Tristan.png" style="height: 350px; width: 350px;" alt="picture1">
 		</div>
 
 	</header>
