changed so its static for github

--- a/index.html
+++ b/index.html
@@ -200,8 +200,7 @@
 						</div>
 							
 							<div class="hide imgAni">	
-						<cite class="footerleft">Tristan Metcalf &copy; 2018-<?php echo date("Y"); ?></cite>
-						<a class="footerright" href="policy.html">Policy</a>
+						<cite class="footerleft">Tristan Metcalf &copy; 2019</cite>
 							</div>
 			</div>
 
