--- a/portfolio.html
+++ b/portfolio.html
@@ -2,18 +2,11 @@
 <html lang="en">
 <head>
 	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/portfoliostyle.css">
 	<link rel="stylesheet" href="css/stylesheet.css">
 	<meta charset="UTF-8">
 	<title>	Portfolio</title>
 
-	<style>
-	.Maincontainer{
-	height: 70em;
-	width: 100%;
-	background-image: url(img/portfoliobackground.jpg);
-	display: flex;
-	}
-	</style>
 </head>
 <body>
 		<header class="container1 ">
@@ -63,7 +56,7 @@
 						</div>
 							
 							<div class="hide imgAni">	
-						<cite class="footerleft">Tristan Metcalf &copy; 2018-<?php echo date("Y"); ?></cite>
+						<cite class="footerleft">Tristan Metcalf &copy; 2019</cite>
 						<a class="footerright" href="policy.php">Policy</a>
 							</div>
 			</div>
