--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<div id="navbar">
 				<ul class="left">
 					<li><img style="height: 54px;width: 56px;position: relative;left: 30px;" class="resize" src="img/tm3.png" alt=""></li>
-					<li><a href="portfolio.php">Portfolio</a></li>
+					<li><a href="portfolio.html">Portfolio</a></li>
 					<li><a href="#usrform">Contact</a></li>
 					<!-- <li><a id="button1" href="#">services</a></li> -->
 				</ul>
