--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 			<div id="navbar">
 				<ul class="left">
 					<li><img style="height: 54px;width: 56px;position: relative;left: 30px;" class="resize" src="img/tm3.png" alt=""></li>
-					<li><a href="index.php">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li><a href="#usrform">Contact</a></li>
 					<!-- <li><a id="button1" href="#">services</a></li> -->
 				</ul>
