--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 							<p>	Tools used: Html,Css, and JQuery</p>
 							<br>
 
-							<a class="linkBox" href="portfolio.php">
+							<a class="linkBox" href="portfolio.html">
 								Click Here For More →
 							</a>
 
